--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ SPRING_DATASOURCE_URL= jdbc:mysql://mindlog-db.cfw6kq6qgqaj.ap-northeast-2.rds.a
 SPRING_DATASOURCE_PASSWORD= mindlogmindlog
 
 server.port = 3333
+
+spring.jackson.time-zone=Asia/Seoul
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
