--- a/server/build.gradle
+++ b/server/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// for naver clova api
+	implementation 'com.fasterxml.jackson.core:jackson-databind' // JSON 데이터 처리를 위해
 }
 
 tasks.named('test') {
