--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,7 @@ server.port = 3333
 
 spring.jackson.time-zone=Asia/Seoul
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+
+#clova.api.client-id=your-client-id
+#clova.api.client-secret=your-client-secret
+
